# rust-hasura-action-template

./: README.md
.github/workflow/: main.yml
.github/workflows/: function.yml
rust-actix-builder/: Cargo.toml  Dockerfile
rust-hasura-action-okteto/: Cargo.toml  Dockerfile
rust-hasura-action-okteto/main/src/: main.rs
template/rust-hasura-action/: .dockerignore  Dockerfile
template/rust-hasura-action/function/: Cargo.toml
template/rust-hasura-action/function/src/: lib.rs
template/rust-hasura-action/main/: Cargo.toml
template/rust-hasura-action/main/src/: main.rs
