[package]
name = "main"
version = "0.1.0"
authors = ["Austin Rivas <austinrivas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = false

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
function = { path = "../function" }